--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,10 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This app generates a Pinterest style display of all reviews for a Yelp user. PhantomJS must be installed to grab the reviews off of Yelp.
 
-Things you may want to cover:
+Future optimizations to make this app better:
 
-* Ruby version
+* Load and display reviews asynchronously or show a better loading animation
+* Shorten the review text using more/less links
+* Add Yelfie update button to regenerate the Yelfie from new reviews
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
