--- a/README.rdoc
+++ b/README.rdoc
@@ -7,4 +7,5 @@ Future optimizations to make this app better:
 * Load and display reviews asynchronously or show a better loading animation
 * Shorten the review text using more/less links
 * Add Yelfie update button to regenerate the Yelfie from new reviews
+* more...
 
