--- a/README.rdoc
+++ b/README.rdoc
@@ -9,5 +9,8 @@ Future optimizations to make this app better:
 * Add Yelfie update button to regenerate the Yelfie from new reviews
 * more...
 
-* Installation on heroku requires the following configurations:
+Installation on heroku requires the following configurations:
 https://gist.github.com/edelpero/9257311
+
+Known issues:
+* Building a Yelfie on local machine grabs 10 pages of reviews, while Heroku deployed app only pulls the 1st page.
